# bubblejail

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  README.md  SECURITY.md  bubblejail.py  lgtm.yml  meson.build  meson.format  meson_complile_bytecode.build  meson_options.txt  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yaml  codeql-analysis.yml  codeql.yml  python-lint.yml
bubblejail/: __init__.py  bubblejail.py  bubblejail_cli.py  bubblejail_directories.py  bubblejail_gui_qt.py  bubblejail_helper.py  bubblejail_instance.py  bubblejail_instance_config.py  bubblejail_manager.py  bubblejail_seccomp.py  bubblejail_utils.py  bwrap_config.py  exceptions.py  meson.build  profiles.py  services.py
bubblejail/profiles/: code_oss.toml  firefox.toml  firefox_wayland.toml  lutris.toml  steam.toml
bubblejail_module/: __init__.py  bwrap_config.py
bubblejail_module/presets/: __init__.py  x.py
bubblejail_module/profiles/: __init__.py  base_profile.py  firefox.py
data/: bubblejail-config.desktop  bubblejail-config.png.license  bubblejail-config.svg.license  bubblejail_completion.bash  bubblejail_completion.fish  bubblejail_gui_qt_launch  bubblejail_helper_launch  bubblejail_launch  meson.build
data/bubblejail/profiles/: chromium.toml  code_oss.toml  firefox.toml  firefox_wayland.toml  lutris.toml  steam.toml  transmission-gtk.toml
data/usr-share/bubblejail/profiles/: brave-beta.toml  brave-nightly.toml  brave.toml  chromium.toml  chromium_wayland.toml  code_oss.toml  firefox.toml  firefox_legacy.toml  firefox_wayland.toml  generic.toml  librewolf_wayland.toml  localsend.toml  lutris.toml  media-player.toml  steam.toml  telegram.toml  thunderbird_wayland.toml  tor_browser_wayland.toml  transmission-gtk.toml  typora.toml  vivaldi-snapshot.toml  vivaldi.toml  zotero.toml
docs/: TODO.md  breaking_changes.md  man_generator.py  meson.build
docs/distro_notes/: alpine.md  ubuntu.md  void.md
docs/man/: bubblejail.rst  conf.py
docs/templates/: bubblejail.1.scd.jinja2  bubblejail.services.5.scd.jinja2
m4/: bubblejail_cli_launch.m4  bubblejail_gui_qt_launch.m4  bubblejail_helper_launch.m4  meson.build
src/: meson.build
src/bubblejail/: __init__.py  bubblejail_cli.py  bubblejail_cli_autocomplete.py  bubblejail_cli_metadata.py  bubblejail_directories.py  bubblejail_gui_qt.py  bubblejail_helper.py  bubblejail_home_plugins.py  bubblejail_instance.py  bubblejail_runner.py  bubblejail_seccomp.py  bubblejail_utils.py  bwrap_config.py  dbus_proxy.py  exceptions.py  logging.py  meson.build  namespaces.py  namespaces_constants.py  py.typed  services.py  utils.py  wizard.py
src/gtk/: bubblejail_config_gtk_main.c
src/gtk/bubblejail_config/: bubblejail_config.h  instance_list.c  main.c  meson.build
src/namespaces_constants/: generate_namespaces_constants.py  meson.build  namespaces_constants_json.c
templates/: bubblejail_cli_launch.py.jinja2  bubblejail_gui_qt_launch.py.jinja2  bubblejail_helper_launch.py.jinja2  bubblejail_launch_base.py.jinja  bubblejail_launch_cli.py.jinja  bubblejail_launch_gui_qt.py.jinja  bubblejail_launch_helper.py.jinja  namespaces_constants.py.jinja2  python_shebang.jinja2  setup_bubblejail_settings.py.jinja2  setup_python_path.py.jinja2
test/: __init__.py  meson.build  test_auto_completion.py  test_dbus_wizard.py  test_full_run.py  test_helper.py  test_imports.py  test_instance_creation.py  test_profiles.py  test_service_info.py
tools/: base.py  bytecode_compiler.py  jinja2_run.py  meson.build  print_bytecode.py  run_format.py  run_linters.py  run_test_bubblejail.py  venv_setup.py
tools/containers/: build_ci_images.py
tools/templates/: bubblejail_cli_launch.py.jinja2  bubblejail_gui_qt_launch.py.jinja2  bubblejail_helper_launch.py.jinja2  setup_bubblejail_settings.py.jinja2  setup_python_path.py.jinja2
