# SPDX-License-Identifier: GPL-3.0-or-later
# SPDX-FileCopyrightText: 2022 igo95862
option('version_display', type: 'string', value: '', description: 'Custom --version display.')
option('man', type : 'boolean', value : true, description : 'Generate and install man pages for CLI tool and services.')
option('allow-site-packages-dir', type : 'boolean', value : false, description : 'Allow using Python\'s site-packages directory for Python modules instead of version independent location.')
option('use-vendored-python-lxns', type : 'feature', value : 'disabled', description : 'Use meson subproject for python-lxns library.')
