
source_files = [
   '__init__.py',
   'bubblejail_cli.py',
   'bubblejail_directories.py',
   'bubblejail_gui_qt.py',
   'bubblejail_helper.py',
   'bubblejail_instance.py',
   'bubblejail_seccomp.py',
   'bubblejail_utils.py',
   'bwrap_config.py',
   'exceptions.py',
   'services.py',
]

py_installation.install_sources(source_files,
    subdir : meson.project_name()
)
