
source_files = [
   '__init__.py',
   'bubblejail_cli.py',
   'bubblejail_directories.py',
   'bubblejail_gui_qt.py',
   'bubblejail_helper.py',
   'bubblejail_instance.py',
   'bubblejail_seccomp.py',
   'bubblejail_utils.py',
   'bwrap_config.py',
   'exceptions.py',
   'services.py',
]

install_data(source_files,
    install_dir : 'lib/bubblejail/python_packages/bubblejail',
)
