# SPDX-License-Identifier: GPL-3.0-or-later
# SPDX-FileCopyrightText: 2020 igo95862
source_files = [
   '__init__.py',
   'bubblejail_cli.py',
   'bubblejail_cli_metadata.py',
   'bubblejail_cli_autocomplete.py',
   'bubblejail_directories.py',
   'bubblejail_gui_qt.py',
   'bubblejail_helper.py',
   'bubblejail_instance.py',
   'bubblejail_runner.py',
   'bubblejail_seccomp.py',
   'bubblejail_utils.py',
   'bwrap_config.py',
   'dbus_proxy.py',
   'exceptions.py',
   'services.py',
   'utils.py',
   'wizard.py',
   'py.typed',
]


py_installation.install_sources(
    source_files,
    subdir : 'bubblejail',
    install_tag : 'runtime',
)
